# wms

./: .dockerignore  .env.local.example  .env.local.https.example  .gitignore  .tool-versions  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  jest.config.js  package-lock.json  package.json  pyproject.toml  urls.py
.github/: copilot-instructions.md
.github/instructions/: instructions.md  item-addition.instructions.md  item-search.instructions.md  llm-infra.instructions.md  qr-code-flow.instructions.md  ui-ux.instructions.md
aws_utils/: __init__.py  model_id.py  region.py
core/: CLAUDE.md  access.py  admin.py  apps.py  backends.py  context_processors.py  email.py  forms.py  middleware.py  models.py  settings.py  upload_paths.py  urls.py  utils.py  views.py
core/llm_calls/: bin_description_generation.json  bin_generation.json  bin_location_generation.json  bin_name_generation.json  item_candidates_search.json  item_description_generation.json  item_generation.json  item_image_generation.json  item_location_search.json
core/management/: __init__.py
core/management/commands/: __init__.py  bin_generation_schema.py  bin_generation_schemas.py  create_beta_user.py  create_beta_users.py  create_fake_bins.py  create_fake_items.py  create_fake_units.py  delete_all_bins.py  delete_all_units.py  ensure_superuser.py  item_generation_schema.py
core/migrations/: 0001_initial.py  0002_alter_location_user_and_more.py  0003_unit_dimensions_unit_alter_unit_height_and_more.py  0004_wmsuser_must_change_password.py  0005_item_quantity_item_quantity_unit_and_more.py  0006_alter_item_quantity_unit.py  0007_item_description_optional.py  0008_alter_item_quantity_to_decimal_field.py  0009_alter_item_quantity_unit_choices.py  0010_wmsuser_has_completed_onboarding.py  0011_set_existing_users_onboarded.py  0012_location_shared_users.py  0013_permission_choices_and_constraints.py
core/static/core/css/: input.css  styles.css
core/static/core/js/: add_items_flow.js  add_items_flow.test.js  browse.js  browse.test.js  browse_crud.js  browse_crud.test.js  debug.js  debug.test.js  dialog_manager.js  dynamic_form.js  dynamic_form.test.js  dynamic_greeting.js  dynamic_greeting.test.js  fetch_utils.js  fetch_utils.test.js  item_search.js  onboarding.js  onboarding.test.js  quantity_category_filter.js  quantity_category_filter.test.js  quantity_controls.js  quantity_controls.test.js  quantity_logic.js  quantity_logic.test.js  sharing.js  sharing.test.js  theme.js  theme.test.js  ui_utils.js
core/tailwind/: input.css
core/templates/: 400.html  403.html  404.html  500.html
core/templates/core/: account.html  add_items_to_bin.html  add_items_to_unit.html  auto_generate_item.html  base.html  base_tw.html  bin_detail.html  confirm_item.html  create_bin.html  create_storage.html  create_unit.html  expand_inventory.html  getting_started.html  home.html  inventory.html  item_detail.html  item_edit.html  item_search.html  list_bins.html  list_units.html  onboarding.html  unit_detail.html  unit_edit.html
core/templates/core/auth/: change_password.html  login.html  register.html
core/templates/core/email/: beta_invitation.html  beta_invitation.txt
core/templates/core/includes/: bottom_nav.html  dialog_shell.html  form_error_snackbar_script.html  toast.html
core/templates/core/includes/dialogs/: create_location.html  create_unit.html  delete_location.html  delete_unit.html  edit_item.html  edit_location.html  edit_unit.html  item_detail_sheet.html  move_item.html  sharing.html
deploy/: containers.example.json  generate_ca_qr.py  generate_qr.py  public-endpoint.json
docs/: LOCAL_HTTPS_SETUP.md
lib/: pydantic_utils.py
lib/llm/: CLAUDE.md  __init__.py  claude4_xml_parser.py  gemini_model_id.py  item_generation.py  llm_call.py  llm_handler.py  llm_search.py  model_id.py  utils.py
lib/llm/tests/: conftest.py  test_llm_call.py  test_llm_handler.py  test_llm_search.py
lightsail/: containers.example.json  public-endpoint.json
llm/: CLAUDE.md  __init__.py  claude4_xml_parser.py  item_generation.py  llm_call.py  llm_handler.py  llm_search.py  model_id.py
llm/tests/: conftest.py  test_llm_call.py  test_llm_handler.py  test_llm_search.py
llm_calls/: item_location_search.json
llm_calls/item_generation/: item_image_generation.json
llm_calls/item_search/: item_candidates_search.json  item_location_search.json
llm_calls/synthetic_data/: item_generation.json  unit_generation.json
schemas/: __init__.py  item_generation.py  item_search_input.py  llm_search.py
schemas/synthetic_data/: __init__.py  bin_generation.py  item_generation.py  unit_generation.py
tests/: __init__.py  conftest.py  test_beta_invitation_email.py  test_forms.py  test_image_validation.py  test_middleware.py  test_models.py  test_qr_codes.py  test_views.py
tests/e2e/: CLAUDE.md  __init__.py  config.yaml.example  conftest.py  test_auth_flows.py  test_browse_hierarchy.py  test_crud_items.py  test_crud_locations.py  test_crud_units.py  test_item_search.py  test_sharing.py  test_visual_accessibility.py
wms/: asgi.py  settings.py  urls.py  wsgi.py
