[tool.poetry]
name = "wms"
version = "0.1.0"
description = "A web-native and LLM-enhanced app for organizing and finding your sh*t!"
authors = ["Alex Falconer-Athanassakos"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
qrcode = "^8.0"
langchain = "^0.3.19"
langchain-aws = "^0.2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Docstring for modules
    "D413", # Blank line at end of docstring
    "D204", # Blank line after docstring
    "COM812" # Trailing comma in function def
]


[tool.ruff]
line-length = 150

[tool.ruff.per-file-ignores]
"test_*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "S101", # Use of assert
    "ANN201"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.3.5"